--- a/.github/workflows/generate-asci.yml
+++ b/.github/workflows/generate-asci.yml
@@ -10,17 +10,9 @@ jobs:
             - name: Checkout Repo
               uses: actions/checkout@v4
             
-            - name: Install Cowsay Program
-              run: sudo apt-get install cowsay -y
-            
-            - name: Execute Cowsay CMD
-              run: cowsay -f dragon "Run for cover i am a dragon.... RAWR" >> dragon.txt
-
-            - name: Test File Exists
-              run: grep -i "dragon" dragon.txt
-            
-            - name: Read File
-              run: cat dragon.txt
-            
-            - name: List Repo Files
+            - name: List File in Repo
               run: ls -ltra
+            
+            - name: Execute Shell Script
+              run: ./ascii-script.sh
+            
