--- a/.github/workflows/generate-asci.yml
+++ b/.github/workflows/generate-asci.yml
@@ -14,5 +14,7 @@ jobs:
               run: ls -ltra
             
             - name: Execute Shell Script
-              run: ./ascii-script.sh
+              run:
+                chmod +x ./ascii-script.sh
+                ./ascii-script.sh
             
